--- a/index.html
+++ b/index.html
@@ -784,56 +784,55 @@
                 <div class="projects-grid">
                     <div class="project-card scroll-animate">
                         <div class="project-image">
-                            <i class="fas fa-shopping-cart"></i>
+                            <i class="fas fa-paw"></i>
                         </div>
                         <div class="project-content">
-                            <h3>E-Commerce Website</h3>
-                            <p>A fully responsive e-commerce platform built with React and modern CSS techniques.</p>
-                            <div class="project-tags">
-                                <span class="tag">React</span>
-                                <span class="tag">CSS3</span>
-                                <span class="tag">JavaScript</span>
-                            </div>
-                            <div class="project-links">
-                                <a href="#"><i class="fas fa-external-link-alt"></i> Live Demo</a>
-                                <a href="#"><i class="fab fa-github"></i> Source Code</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project-card scroll-animate">
-                        <div class="project-image">
-                            <i class="fas fa-chart-line"></i>
-                        </div>
-                        <div class="project-content">
-                            <h3>Dashboard Application</h3>
-                            <p>Interactive dashboard with data visualization and responsive design using React and Chart.js.</p>
-                            <div class="project-tags">
-                                <span class="tag">React</span>
-                                <span class="tag">Tailwind CSS</span>
-                                <span class="tag">Chart.js</span>
-                            </div>
-                            <div class="project-links">
-                                <a href="#"><i class="fas fa-external-link-alt"></i> Live Demo</a>
-                                <a href="#"><i class="fab fa-github"></i> Source Code</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project-card scroll-animate">
-                        <div class="project-image">
-                            <i class="fas fa-mobile-alt"></i>
-                        </div>
-                        <div class="project-content">
-                            <h3>Mobile-First Portfolio</h3>
-                            <p>Responsive portfolio website built with HTML5, CSS3, and vanilla JavaScript.</p>
+                            <h3>Safari Website</h3>
+                            <p>A fully responsive Safari platform built with Html,Javascript and modern CSS techniques.</p>
                             <div class="project-tags">
                                 <span class="tag">HTML5</span>
                                 <span class="tag">CSS3</span>
                                 <span class="tag">JavaScript</span>
-                                <span class="tag">Bootstrap</span>
                             </div>
                             <div class="project-links">
-                                <a href="#"><i class="fas fa-external-link-alt"></i> Live Demo</a>
-                                <a href="#"><i class="fab fa-github"></i> Source Code</a>
+                                <a href="https://safari-kenya.vercel.app/"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                                <a href="https://github.com/AbdirashidHaji/SafariKenya.git"><i class="fab fa-github"></i> Source Code</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-card scroll-animate">
+                        <div class="project-image">
+                            <i class="fas fa-hospital"></i>
+                        </div>
+                        <div class="project-content">
+                            <h3>Hospital Website</h3>
+                            <p>A Hospital Website Build using Html, Css and Javascript.</p>
+                            <div class="project-tags">
+                                <span class="tag">HTML5</span>
+                                <span class="tag">CSS3</span>
+                                <span class="tag">JavaScript</span>
+                            </div>
+                            <div class="project-links">
+                                <a href="https://gedwell-hospital.vercel.app/"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                                <a href="https://github.com/AbdirashidHaji/Gedwell-Hospital.git"><i class="fab fa-github"></i> Source Code</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-card scroll-animate">
+                        <div class="project-image">
+                            <i class="fas fa-graduation-cap"></i>
+                        </div>
+                        <div class="project-content">
+                            <h3>Learning Website</h3>
+                            <p>Responsive Learning website built with HTML5, CSS3, and vanilla JavaScript.</p>
+                            <div class="project-tags">
+                                <span class="tag">HTML5</span>
+                                <span class="tag">CSS3</span>
+                                <span class="tag">JavaScript</span>
+                            </div>
+                            <div class="project-links">
+                                <a href="https://learnhub-plum.vercel.app/"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                                <a href="https://github.com/AbdirashidHaji/LEARNHUB.git"><i class="fab fa-github"></i> Source Code</a>
                             </div>
                         </div>
                     </div>
