--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abdirashid Mohamed Haji - Frontend Developer</title>
+    <script src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/firebase.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <style>
         :root {
@@ -770,6 +771,16 @@
                             <h3>Bootstrap</h3>
                             <p>Responsive framework</p>
                         </div>
+                        <div class="skill-item">
+                            <i class="fas fa-code"></i>
+                            <h3>Version Control</h3>
+                            <p>Git & GitHub</p>
+                        </div>
+                        <div class="skill-item">
+                            <i class="fa-solid fa-fire-flame-simple"></i>
+                            <h3>Firebase</h3>
+                            <p>Backend-as-a-Service </p> 
+                        </div>
                     </div>
                 </div>
             </div>
@@ -832,6 +843,25 @@
                             </div>
                             <div class="project-links">
                                 <a href="https://learnhub-plum.vercel.app/"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                                <a href="https://github.com/AbdirashidHaji/LEARNHUB.git"><i class="fab fa-github"></i> Source Code</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="project-card scroll-animate">
+                        <div class="project-image">
+                            <i class="fas fa-chart-line"></i>
+                        </div>
+                        <div class="project-content">
+                            <h3>Life Tracker Website</h3>
+                            <p>Responsive Life Tracker website built with Ract js, Tailwindcss, and Firebase.</p>
+                            <div class="project-tags">
+                                <span class="tag">REACT JS</span>
+                                <span class="tag">TAILWINDCSS</span>
+                                <span class="tag">FIREBASE</span>
+                            </div>
+                            <div class="project-links">
+                                <a href="https://life-tracker-d7817.web.app/"><i class="fas fa-external-link-alt"></i> Live Demo</a>
                                 <a href="https://github.com/AbdirashidHaji/LEARNHUB.git"><i class="fab fa-github"></i> Source Code</a>
                             </div>
                         </div>
