--- a/index.html
+++ b/index.html
@@ -711,8 +711,8 @@
                             <div class="social-links">
                                 <a href="mailto:abdirashid.ke@gmail.com"><i class="fas fa-envelope"></i></a>
                                 <a href="tel:+254742822463"><i class="fas fa-phone"></i></a>
-                                <a href="#"><i class="fab fa-github"></i></a>
-                                <a href="#"><i class="fab fa-linkedin"></i></a>
+                                <a href="https://github.com/AbdirashidHaji"><i class="fab fa-github"></i></a>
+                                <a href="https://www.linkedin.com/in/abdirashid-mohamed-haji-338723244/"><i class="fab fa-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
