--- a/index.html
+++ b/index.html
@@ -862,10 +862,31 @@
                             </div>
                             <div class="project-links">
                                 <a href="https://life-tracker-d7817.web.app/"><i class="fas fa-external-link-alt"></i> Live Demo</a>
-                                <a href="https://github.com/AbdirashidHaji/LEARNHUB.git"><i class="fab fa-github"></i> Source Code</a>
+                                <a href=""><i class="fab fa-github"></i> Source Code</a>
                             </div>
                         </div>
                     </div>
+
+                    <div class="project-card scroll-animate">
+                      <div class="project-image">
+                            <i class="fas fa-store"></i> 
+                        </div>
+                   <div class="project-content">
+                       <h3>Shop Management Website</h3> 
+                       <p>Responsive Shop Management system built with React JS, TailwindCSS, Material UI, and Firebase.</p> 
+                       <div class="project-tags">
+                              <span class="tag">REACT JS</span>
+                                <span class="tag">TAILWINDCSS</span>
+                               <span class="tag">MATERIAL UI</span>
+                             <span class="tag">FIREBASE</span>
+                              </div>
+                        <div class="project-links">
+                        <a href="https://shop-management-tau.vercel.app/"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                        <a href=""><i class="fab fa-github"></i> Source Code</a>
+                      </div>
+                        </div>
+                   </div>
+
                 </div>
             </div>
         </section>
