--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abdirashid Mohamed Haji - Frontend Developer</title>
     <script src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/firebase.js"></script>
+    <script>
+  window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+</script>
+<script defer src="/_vercel/insights/script.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <style>
         :root {
@@ -602,6 +606,12 @@
             .about-content {
                 grid-template-columns: 1fr;
             }
+            .projects-grid {
+                padding: 0 15px; /* Adds some side padding */
+             }
+            .projects-grid {
+                grid-template-columns: 1fr;
+            }
 
             .contact-content {
                 grid-template-columns: 1fr;
@@ -886,6 +896,24 @@
                       </div>
                         </div>
                    </div>
+                    <div class="project-card scroll-animate">
+                        <div class="project-image">
+                            <i class="fas fa-laptop-code"></i>
+                        </div>
+                        <div class="project-content">
+                            <h3>Digital Agency Website</h3>
+                            <p>Responsive Digital Agency website built with React JS, TailwindCSS, Material UI</p>
+                            <div class="project-tags">
+                                <span class="tag">REACT JS</span>
+                                <span class="tag">TAILWINDCSS</span>
+                                <span class="tag">MATERIAL UI</span>
+                            </div>
+                            <div class="project-links">
+                                <a href="https://digital-agency-pearl-seven.vercel.app/"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                                <a href=""><i class="fab fa-github"></i> Source Code</a>
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
             </div>
